# some-tools

./: .gitignore  README.md  bitpack.c  bitpack.h  main.c  some-tools.pro
bitpacker/: bitpack.c  bitpack.h  bitpacker.pro  main.c  mem-block.c  mem-block.h  struct-fields.h
charset/: cs-utf8.c  cs-utf8.h
cmaketest/: CMakeLists.txt  override.cmake
containers/: cnt-deque.c  cnt-deque.h  cnt-heap.c  cnt-heap.h
drafts/arr/: arr.c
inc/: struct-fields.h
lists/: bilinked-list.c  bilinked-list.h  linked-list.c  linked-list.h  list-work.c  list-work.h
memory/: mem-array.c  mem-array.h  mem-block.c  mem-block.h  mm-array.c  mm-array.h  mm-block.c  mm-block.h  mm-hex.c  mm-hex.h
prefix-tree-test/: README.md  main.c  mm-array.c  mm-array.h  mm-block.c  mm-block.h  prefix-tree.c  prefix-trie.pro
templ/: arrays.h  deque.h  lists.h  vector.h
tmp/: subseq.C
trees/: aa-tree.c  aa-tree.h  prefix-tree.c  prefix-tree.h
varints/: base128.c  base128.h  zig-zag.c  zig-zag.h
